@startuml
'https://plantuml.com/class-diagram

abstract class FlyingObject
{
    # int locationX
    # int locationY
    # int speedX
    # int speedY
    # BufferedImage image
    # int width
    # int height
    # boolean isValid

    + FlyingObject(int locationX, int locationY, int speedX, int speedY):void
    + forward():void
    + crash(FlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# int maxHp
    # int hp
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp):void
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<Bullet>
 }

abstract class AbstractBullet
{
    - int power
    + Bullet(int locationX, int locationY, int speedX, int speedY, int power):void
    + forward():void
	+ getPower():int
}

abstract class AbstractProp
{
    - int species
    + Prop(int locationX, int locationY, int speedX, int speedY, int feature):void
}

FlyingObject <|-- AbstractAircraft
FlyingObject <|-- AbstractBullet
FlyingObject <|-- AbstractProp

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- BossEnemy

AbstractBullet <|-- HeroBullet
AbstractBullet <|-- EnemyBullet

AbstractProp <|-- BloodProp
AbstractProp <|-- BulletProp
AbstractProp <|-- BombProp

class HeroAircraft {
    - int shootNum
    - int power
    - int direction
    + HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp):void
    + forward():void
    + shoot():List<Bullet>
}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp):void
    + forward():void
    + shoot():List<Bullet>
}

class EliteEnemy{
    - int shootNum
    - int power
    - int direction
    + EliteEnemy(int locationX,int locationY,int speedX,int speedY,int hp):void
    + forward():void
    + shoot():List<Bullet>
}

class BossEnemy{
    - int shootNum
    - int power
    - int direction
    + BossEnemy(int locationX,int locationY,int speedX,int speedY,int hp):void
    + forward():void
    + shoot():List<Bullet>
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power):void
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power):void
}

class BloodProp{
    + BloodProp(int locationX,int locationY,int speedX,int speedY,int feature):void
}

class BulletProp{
    + BulletProp(int locationX, int locationY,int speedX, int speedY, int feature):void
}

class BombProp{
    + BombProp(int locationX, int locationY,int speedX, int speedY, int feature):void
}

@enduml